k8s/osdu/core/base/services/admin-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osdu-admin-ui
  namespace: osdu-core
spec:
  selector:
    app: osdu-admin-ui
  ports:
    - port: 8080
      targetPort: 8080
